--- a/src/css/main.css
+++ b/src/css/main.css
@@ -39,3 +39,41 @@
         content: ' ';
     }
 }
+
+/**
+ * React Bootstrap Table.
+ *
+ * Add styles to the table's search field to mimic Bootstrap's form controls.
+ */
+.react-bs-container .btn-group ~ input {
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+    font-size: inherit;
+    display: block;
+    height: 34px;
+    margin-bottom: 15px;
+    padding: 6px 12px;
+    transition-duration: .15s;
+    transition-property: border-color, box-shadow;
+    transition-timing-function: ease-in-out;
+    width: 100%;
+}
+@media (min-width: 768px) {
+    .react-bs-container .btn-group ~ input {
+        width: 50%;
+    }
+}
+@media (min-width: 992px) {
+    .react-bs-container .btn-group ~ input {
+        width: 33.33%;
+    }
+}
+.react-bs-container .btn-group ~ input:focus {
+    border-color: #66afe9;
+    box-shadow:
+        inset 0 1px 1px rgba(0,0,0,.075),
+        0 0 8px rgba(102, 175, 233, .6);
+    outline: 0;
+}
