Rework list filtering into main navigation.

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -8,6 +8,13 @@
     padding-top: 70px;
 }
 
+/** Header */
+@media (min-width: 768px) {
+    .navbar-right.btn {
+        margin-right: 0;
+    }
+}
+
 /** Footer */
 .site-footer p,
 .site-footer small {
